feat: first MVP for personal tests

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/index.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>HELLO</h1>
-    <h2>Testes disponíveis:</h2>
-    <div id="listLinks" class="links"></div>
-    <div id="questionsForm"></div>
+    <header>
+        <h2>Testes disponíveis:</h2>
+        <div id="listLinks" class="links"></div>
+    </header>
+    <form id="questionsForm"></form>
 
     <script type="module" src="./scipts/index.js"></script>
 </body>
+
 </html>
